2006-11-26  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py (restart): remove the old message
	that got printed after the buildbot was restarted.. it most cases
	it didn't get printed at the right time anyways

2006-11-25  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py: enhance 'start' and 'restart' to
	follow twistd.log and print lines until the process has started
	started properly. For the buildmaster, this means until the config
	file has been parsed and accepted. For the buildslave, this means
	until we've connected to the master. We give up after 5 seconds in
	any case. Helpful error messages and troubleshooting suggestions
	are printed when we don't see a successful startup. This closes the
	remainder of SF#1517975.
	* buildbot/scripts/startup.py: moved app startup code to here
	* buildbot/scripts/logwatcher.py: utility class to follow log
	* buildbot/scripts/reconfig.py: rewrite to use LogWatcher
	* buildbot/slave/bot.py: announce our BuildSlaveness to the log
	so the LogWatcher can tell the difference between a buildmaster
	and a buildslave

2006-11-24  Brian Warner  <warner@lothar.com>

	* docs/examples/twisted_master.cfg: update to match the version
	in use on twistedmatrix.com
	(IRC): re-enable IRC bot. The 'irc.us.freenode.net' hostname I
	was using before stopped working, but 'irc.freenode.net' works
	just fine.

	* buildbot/scripts/runner.py (run): oops, forgot to enable the new
	'reconfig' command

	* buildbot/clients/base.py (TextClient.not_connected): upon
	UnauthorizedLogin failures, remind the user to connect to the
	PBListener port instead of the slaveport.
	(TextClient.disconnected): shut down more quietly
	* docs/buildbot.texinfo (statuslog): add another reminder

	* buildbot/scripts/runner.py (Options.subCommands): rename
	'buildbot sighup DIR' to 'buildbot reconfig DIR', but keep
	'sighup' as an alias.
	* buildbot/scripts/reconfig.py (Reconfigurator): enhance the