@@ -1,5 +1,8 @@
 2006-11-26  Brian Warner  <warner@lothar.com>
 
+	* buildbot/scripts/startup.py (start): skip the whole
+	watch-the-logfile thing under windows, since it needs os.fork()
+
 	* buildbot/scripts/runner.py (restart): remove the old message
 	that got printed after the buildbot was restarted.. it most cases
 	it didn't get printed at the right time anyways
